<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainaction"
            android:icon="@drawable/mainfragment"
            android:checked="true"
            android:title="@string/main" />
        <item
            android:id="@+id/settingaction"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/setting" />

        <item android:title="历史追溯">
            <menu>
                <item
                    android:id="@+id/historyaction"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/history" />
            </menu>
        </item>

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/shareaction"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/aboutaction"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
